# macvideo

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml
config/: styles.yaml
docs/: 20260420-music-video-ltx23-mac.md  20260420-pipeline-plan.md
docs/architecture/: temporary-legacy-dependencies.json
docs/debates/: 20260501-architecture-and-strategy.md
docs/plans/: 20260420-initial-prototyping.md  20260420-poc-plan.md  20260423-misalignment-contingency.md
docs/reports/: 20260423-little-blackbird-v1.md
docs/research/: 20260421-better-transcription.md  20260421-memory-time-profiling.md
editor/server/: config.py  env_file.py  importer.py  main.py  range_static.py
editor/server/api/: assets.py  audio_transcribe.py  common.py  preview_change.py  regen.py  scenes.py  songs.py  stages.py  test_only.py  transcript.py
editor/server/architecture/: __init__.py  boundary.py
editor/server/generation/: __init__.py  services.py
editor/server/pipeline/: __init__.py  audio_transcribe.py  final.py  lyric_lines.py  paths.py  preflight.py  pricing.py  regen.py  rescan.py  result.py  stages.py  subprocess_runner.py  transitions.py
editor/server/regen/: __init__.py  events.py  queue.py  runs.py  stages.py  stub_handlers.py
editor/server/rendering/: __init__.py  services.py
editor/server/store/: __init__.py  scene_plan.py  schema.py  staleness.py
editor/server/tests/: conftest.py  test_api_filter_chain.py  test_api_quality_mode.py  test_api_regen.py  (+45 more)
editor/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
pocs/01-ltx-smoke/: README.md  RESULT.md
pocs/02-ltx-audio-cond/: README.md  RESULT.md
pocs/03-ltx-i2v/: README.md  RESULT.md
pocs/04-ltx-chained/: README.md  RESULT.md
pocs/05-gemini-still/: README.md  RESULT.md
pocs/06-gemini-identity/: README.md  RESULT.md
pocs/07-whisperx/: README.md  RESULT.md
pocs/10-filters/: README.md  RESULT.md
pocs/11-scene-cuts/: README.md  RESULT.md
pocs/12-timing-shot/: README.md  RESULT.md
pocs/13-combined/: README.md  RESULT.md
pocs/14-abstraction/: README.md  RESULT.md
pocs/15-gap-interpolation/: README.md  RESULT.md
pocs/16-storyboard/: README.md  RESULT.md
pocs/17-filter-gallery/: README.md  RESULT.md
pocs/18-filter-chooser/: README.md  RESULT.md
pocs/19-abstraction-gallery/: README.md  RESULT.md
pocs/20-audio-influence/: README.md
pocs/21-1080p-probe/: README.md
pocs/22-audio-timeline/: README.md  RESULT.md
pocs/23-snap-to-event/: README.md  RESULT.md
pocs/24-event-densify/: README.md  RESULT.md
pocs/25-start-end/: README.md  RESULT.md
pocs/26-deforum-fake/: README.md
pocs/28-zoom-morph/: RESULT.md
pocs/30-whisper-timestamped/: README.md  RESULT.md
pocs/31-gemini-transcribe/: README.md  RESULT.md
pocs/_lib/: audio_features.py  poc_helpers.py  poc_helpers.sh
pocs/lyrics-line-format/: README.md  RESULT.md  format_lines.py  no-mans-land.lines.json  no-mans-land.whisperx.json
scripts/: check_dev_environment.py  start_editor.sh
(+147 files in other folders)
