[project]
name = "macvideo"
version = "0.0.0"
description = "Music video pipeline — .wav to dramatic video on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx-video @ git+https://github.com/Blaizzy/mlx-video.git@9ab4826d20e39286af13a26615c33b403d48be72",
]

[tool.uv]
# Additional dependency groups added per POC as they come online.
# Keep the base env small — POC 1 only needs mlx-video.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No packages to build yet; the pipeline code lives under scripts/ and pocs/.
bypass-selection = true
