[project]
name = "macvideo"
version = "0.0.0"
description = "Music video pipeline — .wav to dramatic video on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    # Pinned to PR #24 HEAD (nopmobiel) — fixes LTX-2.3 VAE encoder broadcast error for I2V.
    # Upstream Blaizzy/mlx-video@9ab4826 did not include this fix at time of install.
    # Revert to Blaizzy's main once PR #24 is merged.
    "mlx-video @ git+https://github.com/nopmobiel/mlx-video.git@a8cd1db78ad90fa69f30ab6764e14f5c1ba94ca7",
    "google-genai>=1.0.0",
]

[tool.uv]
# Additional dependency groups added per POC as they come online.
# Keep the base env small — POC 1 only needs mlx-video.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No packages to build yet; the pipeline code lives under scripts/ and pocs/.
bypass-selection = true

[tool.hatch.metadata]
# Required because we pin mlx-video to a git commit (a direct URL reference).
allow-direct-references = true
