[project]
name = "macvideo"
version = "0.0.0"
description = "Music video pipeline — .wav to dramatic video on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    # Pinned to PR #23 HEAD (zhaopengme) — adds first+last frame I2V conditioning
    # via --end-image / --end-image-strength flags (POC 25).
    # NOTE: this branch may not include PR #24's VAE fix — if I2V broadcast errors
    # reappear, either cherry-pick PR #24 on top or revert to nopmobiel@a8cd1db.
    "mlx-video @ git+https://github.com/zhaopengme/mlx-video.git@a2046415c778c9c1921e870977420a7d143768ee",
    "google-genai>=1.0.0",
    "demucs>=4.0.0",
    "whisperx>=3.1.0",
    "pyyaml>=6.0",
]

[tool.uv]
# Additional dependency groups added per POC as they come online.
# Keep the base env small — POC 1 only needs mlx-video.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
# No packages to build yet; the pipeline code lives under scripts/ and pocs/.
bypass-selection = true

[tool.hatch.metadata]
# Required because we pin mlx-video to a git commit (a direct URL reference).
allow-direct-references = true
